# voxl-aruco-detector

./: CMakeLists.txt
config/: voxl-aruco-detector.conf.yaml
include/: config.hpp
src/: aruco_publisher.cpp  nv12_to_gray.hpp
